crates/utils/src/snapshots/obeli_sk_utils__wit__tests__wit_should_contain_extensions@test_programs_stub_workflow.wasm_wit.snap
---
source: crates/utils/src/wit.rs
expression: wit
---
package root:component;

world root {
  import obelisk:types/execution@3.0.0;
  import testing:stub-activity-obelisk-ext/activity;
  import testing:stub-activity-obelisk-stub/activity;
  import testing:stub-activity/activity;
  import obelisk:types/time@3.0.0;
  import obelisk:workflow/workflow-support@3.0.0;
  import obelisk:log/log@1.0.0;

  export testing:stub-workflow/workflow;
  export testing:stub-workflow-obelisk-ext/workflow;
  export testing:stub-workflow-obelisk-schedule/workflow;
}
package obelisk:log@1.0.0 {
  interface log {
    info: func(message: string);
  }
}


package obelisk:types@3.0.0 {
  @since(version = 3.0.0)
  interface time {
    @since(version = 3.0.0)
    variant duration {
      milliseconds(u64),
      seconds(u64),
      minutes(u32),
      hours(u32),
      days(u32),
    }

    /// A time and date in seconds plus nanoseconds.
    /// Extracted from wasi:clocks@0.2.0 to avoid dependency on wasi:io
    @since(version = 3.0.0)
    record datetime {
      seconds: u64,
      nanoseconds: u32,
    }

    @since(version = 3.0.0)
    variant schedule-at {
      now,
      at(datetime),
      in(duration),
    }
  }
  @since(version = 3.0.0)
  interface execution {
    /// Join set resouce.
    @since(version = 3.0.0)
    resource join-set {
      @since(version = 3.0.0)
      id: func() -> string;
    }

    @since(version = 3.0.0)
    record execution-id {
      id: string,
    }

    @since(version = 3.0.0)
    record delay-id {
      id: string,
    }

    @since(version = 3.0.0)
    record function {
      /// `namespace:pkg_name/ifc_name` or `namespace:pkg_name/ifc_name@version`
      interface-name: string,
      function-name: string,
    }

    @since(version = 3.0.0)
    variant response-id {
      execution-id(execution-id),
      delay-id(delay-id),
    }

    @since(version = 3.0.0)
    record function-mismatch {
      /// Workflow requested function
      specified-function: function,
      /// What was found actually during execution. None if delay was found as next unprocessed response.
      actual-function: option<function>,
      actual-id: response-id,
    }

    /// Error that is thrown by `-await-next` extension functions.
    @since(version = 3.0.0)
    variant await-next-extension-error {
      /// All submitted requests and their responses of specified function and join set were already processed.
      all-processed,
      /// Execution response was awaited and marked as processed, but it belongs to a different function.
      /// This can happen when join set contains responses of multiple functions or delay requests.
      function-mismatch(function-mismatch),
    }

    /// Error variants that may occur when calling `-get` extension functions.
    @since(version = 3.0.0)
    variant get-extension-error {
      /// Execution is found in processed responses, but it belongs to a different function.
      /// This can happen when join set contains responses of multiple functions.
      function-mismatch(function-mismatch),
      /// Processed responses do not contain the specified execution ID.
      /// This can happen if the execution was not marked as processed (awaited), or
      /// the execution ID does not belong to the specified join set.
      not-found-in-processed-responses,
    }

    /// Error variants that may occur when calling `-invoke` extension functions.
    @since(version = 3.0.0)
    variant invoke-extension-error {
      invalid-name(string),
    }

    /// Error variants that may occur when calling `-stub` extension functions.
    @since(version = 3.0.0)
    variant stub-error {
      /// Conflict can happen when a second writer attempts to stub a value, while the
      /// value is not equal to the already stubbed value.
      conflict,
    }
  }
}


package obelisk:workflow@3.0.0 {
  interface workflow-support {
    use obelisk:types/execution@3.0.0.{join-set};
    use obelisk:types/time@3.0.0.{schedule-at};
    use obelisk:types/execution@3.0.0.{delay-id, response-id};

    enum closing-strategy {
      complete,
    }

    variant join-next-error {
      all-processed,
    }

    variant join-set-create-error {
      conflict,
      invalid-name(string),
    }

    submit-delay: func(join-set: borrow<join-set>, timeout: schedule-at) -> delay-id;

    new-join-set-named: func(name: string, closing-strategy: closing-strategy) -> result<join-set, join-set-create-error>;

    new-join-set-generated: func(closing-strategy: closing-strategy) -> join-set;

    close: func(join-set: join-set);

    join-next: func(join-set: borrow<join-set>) -> result<response-id, join-next-error>;
  }
}


package testing:stub-activity-obelisk-ext {
  interface activity {
    use obelisk:types/execution@3.0.0.{join-set, execution-id, get-extension-error, await-next-extension-error, invoke-extension-error};

    foo-submit: func(join-set: borrow<join-set>, arg: string) -> execution-id;

    foo-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result<string>>, await-next-extension-error>;

    foo-get: func(execution-id: execution-id) -> result<result<string>, get-extension-error>;

    noret-invoke: func(label: string) -> result<result, invoke-extension-error>;
  }
}


package testing:stub-activity-obelisk-stub {
  interface activity {
    use obelisk:types/execution@3.0.0.{execution-id, stub-error};

    foo-stub: func(execution-id: execution-id, execution-result: result<string>) -> result<_, stub-error>;
  }
}


package testing:stub-activity {
  interface activity {
    foo: func(arg: string) -> result<string>;

    noret: func() -> result;
  }
}


package testing:stub-workflow {
  interface workflow {
    use obelisk:types/execution@3.0.0.{execution-id};

    submit-stub-await: func(arg: string) -> result<string>;

    submit-await: func(arg: string) -> result<string>;

    noret-submit-await: func() -> result;

    submit-race-join-next-stub: func() -> result;

    submit-race-join-next-stub-error: func() -> result;

    submit-race-join-next-delay: func() -> result;

    stub-subworkflow: func(execution-id: execution-id, retval: string) -> result;

    await-next-produces-all-processed-error: func() -> result;

    join-next-in-scope: func() -> result;

    invoke-expect-execution-error: func() -> result;

    stubbing-after-join-set-close-should-fail: func() -> result;
  }
}


package testing:stub-workflow-obelisk-ext {
  interface workflow {
    use obelisk:types/execution@3.0.0.{execution-id, join-set, await-next-extension-error, get-extension-error, invoke-extension-error};

    submit-stub-await-submit: func(join-set: borrow<join-set>, arg: string) -> execution-id;

    submit-stub-await-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result<string>>, await-next-extension-error>;

    submit-stub-await-get: func(execution-id: execution-id) -> result<result<string>, get-extension-error>;

    submit-stub-await-invoke: func(label: string, arg: string) -> result<result<string>, invoke-extension-error>;

    submit-await-submit: func(join-set: borrow<join-set>, arg: string) -> execution-id;

    submit-await-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result<string>>, await-next-extension-error>;

    submit-await-get: func(execution-id: execution-id) -> result<result<string>, get-extension-error>;

    submit-await-invoke: func(label: string, arg: string) -> result<result<string>, invoke-extension-error>;

    noret-submit-await-submit: func(join-set: borrow<join-set>) -> execution-id;

    noret-submit-await-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    noret-submit-await-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    noret-submit-await-invoke: func(label: string) -> result<result, invoke-extension-error>;

    submit-race-join-next-stub-submit: func(join-set: borrow<join-set>) -> execution-id;

    submit-race-join-next-stub-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    submit-race-join-next-stub-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    submit-race-join-next-stub-invoke: func(label: string) -> result<result, invoke-extension-error>;

    submit-race-join-next-stub-error-submit: func(join-set: borrow<join-set>) -> execution-id;

    submit-race-join-next-stub-error-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    submit-race-join-next-stub-error-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    submit-race-join-next-stub-error-invoke: func(label: string) -> result<result, invoke-extension-error>;

    submit-race-join-next-delay-submit: func(join-set: borrow<join-set>) -> execution-id;

    submit-race-join-next-delay-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    submit-race-join-next-delay-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    submit-race-join-next-delay-invoke: func(label: string) -> result<result, invoke-extension-error>;

    stub-subworkflow-submit: func(join-set: borrow<join-set>, execution-id: execution-id, retval: string) -> execution-id;

    stub-subworkflow-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    stub-subworkflow-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    stub-subworkflow-invoke: func(label: string, execution-id: execution-id, retval: string) -> result<result, invoke-extension-error>;

    await-next-produces-all-processed-error-submit: func(join-set: borrow<join-set>) -> execution-id;

    await-next-produces-all-processed-error-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    await-next-produces-all-processed-error-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    await-next-produces-all-processed-error-invoke: func(label: string) -> result<result, invoke-extension-error>;

    join-next-in-scope-submit: func(join-set: borrow<join-set>) -> execution-id;

    join-next-in-scope-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    join-next-in-scope-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    join-next-in-scope-invoke: func(label: string) -> result<result, invoke-extension-error>;

    invoke-expect-execution-error-submit: func(join-set: borrow<join-set>) -> execution-id;

    invoke-expect-execution-error-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    invoke-expect-execution-error-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    invoke-expect-execution-error-invoke: func(label: string) -> result<result, invoke-extension-error>;

    stubbing-after-join-set-close-should-fail-submit: func(join-set: borrow<join-set>) -> execution-id;

    stubbing-after-join-set-close-should-fail-await-next: func(join-set: borrow<join-set>) -> result<tuple<execution-id, result>, await-next-extension-error>;

    stubbing-after-join-set-close-should-fail-get: func(execution-id: execution-id) -> result<result, get-extension-error>;

    stubbing-after-join-set-close-should-fail-invoke: func(label: string) -> result<result, invoke-extension-error>;
  }
}


package testing:stub-workflow-obelisk-schedule {
  interface workflow {
    use obelisk:types/execution@3.0.0.{execution-id};
    use obelisk:types/time@3.0.0.{schedule-at};

    submit-stub-await-schedule: func(schedule-at: schedule-at, arg: string) -> execution-id;

    submit-await-schedule: func(schedule-at: schedule-at, arg: string) -> execution-id;

    noret-submit-await-schedule: func(schedule-at: schedule-at) -> execution-id;

    submit-race-join-next-stub-schedule: func(schedule-at: schedule-at) -> execution-id;

    submit-race-join-next-stub-error-schedule: func(schedule-at: schedule-at) -> execution-id;

    submit-race-join-next-delay-schedule: func(schedule-at: schedule-at) -> execution-id;

    stub-subworkflow-schedule: func(schedule-at: schedule-at, execution-id: execution-id, retval: string) -> execution-id;

    await-next-produces-all-processed-error-schedule: func(schedule-at: schedule-at) -> execution-id;

    join-next-in-scope-schedule: func(schedule-at: schedule-at) -> execution-id;

    invoke-expect-execution-error-schedule: func(schedule-at: schedule-at) -> execution-id;

    stubbing-after-join-set-close-should-fail-schedule: func(schedule-at: schedule-at) -> execution-id;
  }
}
